--- a/docs/notebooks/tutorials/advanced_equilibrium_continuation.ipynb
+++ b/docs/notebooks/tutorials/advanced_equilibrium_continuation.ipynb
@@ -27,7 +27,7 @@
    "id": "ff6286b6-e0b7-40b6-8d88-cd5f74da7eed",
    "metadata": {},
    "source": [
-    "In this example, we will discuss manually selecting the steps in a continuation method for solving an equilibrium"
+    "In this example, we will discuss manually selecting the steps in a continuation method for solving an equilibrium. "
    ]
   },
   {
@@ -82,7 +82,7 @@
     "\n",
     "When `M_grid = M_pol`, the number of collocation nodes in each toroidal cross-section is equal to the number of Zernike polynomials in a FourierZernike basis set of the samel resolution `L_rad = M_pol`. When `N_grid = N_tor`, the number of nodes with unique toroidal angles is equal to the number of terms in the toroidal Fourier series. Convergence is typically superior when the number of nodes exceeds the number of spectral coefficients, so by default the collocation grids are oversampled with respect to the spectral resolutions.\n",
     "\n",
-    "It is recommended to NOT include anything for the `pres_ratio` or `bdry_ratio` arguments, as then a conservative, automated multi-grid method will be used that has been found to be very robust. If you want to instead control the multi-grid steps manually, these arguments can also be passed as arrays, where each element denotes the value to use at that iteration. Array elements are delimited by either a space, comma `,` , or semicolon `;`. Arrays can also be created using the shorthand notation `start:interval:end` and `(value)x(repititions)`. For example, an input line of `M_pol = 6:2:10, 10; 11x2 12` is equivalent to `M_pol = 6, 8, 10, 10, 11, 11, 12`.\n",
+    "It is recommended to NOT include anything for the `pres_ratio` or `bdry_ratio` arguments, as then a conservative, automated multi-grid method will be used that has been found to be very robust. If you want to instead control the multi-grid steps manually, these arguments can also be passed as arrays, where each element denotes the value to use at that iteration. Array elements are delimited by either a space ` `, comma `,`, or semicolon `;`. Arrays can also be created using the shorthand notation `start:interval:end` and `(value)x(repititions)`. For example, an input line of `M_pol = 6:2:10, 10; 11x2 12` is equivalent to `M_pol = 6, 8, 10, 10, 11, 11, 12`.\n",
     "\n",
     "### Continuation Method\n",
     "\n",
@@ -143,9 +143,9 @@
     "pert_order = 1\n",
     "\n",
     "# solver tolerances \n",
-    "ftol = 0.01 \n",
-    "xtol = 1e-06 \n",
-    "gtol = 1e-06 \n",
+    "ftol = 1e-2 \n",
+    "xtol = 1e-6 \n",
+    "gtol = 1e-6 \n",
     "nfev = 0 \n",
     "\n",
     "# solver methods\n",
@@ -189,11 +189,11 @@
     "# global parameters \n",
     "sym = 1 \n",
     "NFP = 19 \n",
-    "Psi = 1.00000000\n",
+    "Psi = 1.0\n",
     "\n",
     "# spectral resolution \n",
-    "L_rad =   6, 8\n",
-    "M_pol =   6, 8\n",
+    "L_rad =   6,  8\n",
+    "M_pol =   6,  8\n",
     "N_tor =   0,  0, 3\n",
     "L_grid = 12, 16\n",
     "M_grid = 12, 16\n",
@@ -205,9 +205,9 @@
     "pert_order = 1\n",
     "\n",
     "# solver tolerances \n",
-    "ftol = 0.01 \n",
-    "xtol = 1e-06 \n",
-    "gtol = 1e-06 \n",
+    "ftol = 1e-2 \n",
+    "xtol = 1e-6 \n",
+    "gtol = 1e-6 \n",
     "nfev = 0 \n",
     "\n",
     "# solver methods\n",
@@ -261,8 +261,7 @@
    "source": [
     "```\n",
     "# This DESC input file was auto generated from the VMEC input file\n",
-    "# /home/dpanici/DESC/docs/notebooks/tutorials/input.HELIOTRON\n",
-    "# on 11/20/2023 at 13:46:02.\n",
+    "# /DESC/docs/notebooks/tutorials/input.HELIOTRON\n",
     "# For details on the various options see https://desc-docs.readthedocs.io/en/stable/input.html\n",
     "\n",
     "# global parameters\n",
