--- a/docs/notebooks/tutorials/advanced_optimization.ipynb
+++ b/docs/notebooks/tutorials/advanced_optimization.ipynb
@@ -119,7 +119,7 @@
    "id": "a3553d47-8d95-4e3f-832f-776af160e67f",
    "metadata": {},
    "source": [
-    "By \"multigrid\" method we mean we will start by optimizing over boundary modes with $|m|, |n| < 1$, then $|m|, |n| < 2$ and so on. To do this we'll define a helper function that will create the necessary constraints and objectives for a given maximum mode number $k$.\n",
+    "By \"multigrid\" method we mean we will start by optimizing over boundary modes with $|m|, |n| \\leq 1$, then $|m|, |n| \\leq 2$ and so on. To do this we'll define a helper function that will create the necessary constraints and objectives for a given maximum mode number $k$.\n",
     "\n",
     "By a \"proximal\" optimizer we mean one that handles the equilibrium constraint by re-solving a fixed boundary equilibrium problem at each step, given the current position of the boundary. This is made more efficient by using a perturbed estimate based on the previous step as a warm start to the equilibrium sub-problem."
    ]
@@ -134,15 +134,16 @@
    "outputs": [],
    "source": [
     "def run_qh_step(k, eq):\n",
-    "    \"\"\"Run 1 step of the precise QH optimization example from Landreman & Paul.\"\"\"\n",
+    "    \"\"\"Run a step of the precise QH optimization example from Landreman & Paul.\"\"\"\n",
+    "    # this step will only optimize boundary modes with |m|,|n| <= k\n",
     "\n",
     "    # create grid where we want to minimize QS error. Here we do it on 3 surfaces\n",
     "    grid = LinearGrid(\n",
     "        M=eq.M_grid, N=eq.N_grid, NFP=eq.NFP, rho=np.array([0.6, 0.8, 1.0]), sym=True\n",
     "    )\n",
     "\n",
-    "    # as before, we create an ObjectiveFunction, in this case made up of multiple\n",
-    "    # objectives which will be combined in a least squares sense.\n",
+    "    # we create an ObjectiveFunction, in this case made up of multiple objectives\n",
+    "    # which will be combined in a least squares sense\n",
     "    objective = ObjectiveFunction(\n",
     "        (\n",
     "            # pass in the grid we defined, and don't forget the target helicity!\n",
@@ -159,12 +160,12 @@
     "        (\n",
     "            [0, 0, 0],\n",
     "            eq.surface.R_basis.modes[\n",
-    "                np.max(np.abs(eq.surface.R_basis.modes), 1) > k + 1, :\n",
+    "                np.max(np.abs(eq.surface.R_basis.modes), 1) > k, :\n",
     "            ],\n",
     "        )\n",
     "    )\n",
     "    Z_modes = eq.surface.Z_basis.modes[\n",
-    "        np.max(np.abs(eq.surface.Z_basis.modes), 1) > k + 1, :\n",
+    "        np.max(np.abs(eq.surface.Z_basis.modes), 1) > k, :\n",
     "    ]\n",
     "    # next we create the constraints, using the mode number arrays just created\n",
     "    # if we didn't pass those in, it would fix all the modes (like for the profiles)\n",
@@ -186,11 +187,11 @@
     "        maxiter=20,  # we don't need to solve to optimality at each multigrid step\n",
     "        verbose=3,\n",
     "        options={\n",
-    "            # sometimes the default initial trust radius is too big, allowing the\n",
+    "            # Sometimes the default initial trust radius is too big, allowing the\n",
     "            # optimizer to take too large a step in a bad direction. If this happens,\n",
-    "            # we can manually specify a smaller starting radius. Each optimizer\n",
-    "            # has a number of different options that can be used to tune the performance,\n",
-    "            # see the documentation for more info.\n",
+    "            # we can manually specify a smaller starting radius. Each optimizer has a\n",
+    "            # number of different options that can be used to tune the performance.\n",
+    "            # See the documentation for more info.\n",
     "            \"initial_trust_ratio\": 1.0,\n",
     "        },\n",
     "    )\n",
@@ -236,7 +237,7 @@
    "id": "5f4eace8-4a13-4fad-97bd-f7a21e4ce6ff",
    "metadata": {},
    "source": [
-    "We see that it is vaguely QH like, which is why we're targeting QH symmetry. Now let's run one step of the optimization"
+    "We see that it is vaguely QH like, which is why we're targeting QH symmetry. Now let's run the optimization in steps and look at the intermediate result after each step: "
    ]
   },
   {
@@ -358,7 +359,7 @@
     }
    ],
    "source": [
-    "eq1 = run_qh_step(0, eq0.copy())\n",
+    "eq1 = run_qh_step(1, eq0.copy())\n",
     "eqfam.append(eq1)\n",
     "plot_boozer_surface(eq1);"
    ]
@@ -484,7 +485,7 @@
     }
    ],
    "source": [
-    "eq2 = run_qh_step(1, eq1.copy())\n",
+    "eq2 = run_qh_step(2, eq1.copy())\n",
     "eqfam.append(eq2)\n",
     "plot_boozer_surface(eq2);"
    ]
@@ -606,7 +607,7 @@
     }
    ],
    "source": [
-    "eq3 = run_qh_step(2, eq2.copy())\n",
+    "eq3 = run_qh_step(3, eq2.copy())\n",
     "eqfam.append(eq3)\n",
     "plot_boozer_surface(eq3);"
    ]
@@ -699,7 +700,7 @@
    "source": [
     "For constraints, we'll include the standard force balance to start. In the previous example, fixing certain boundary modes served as a form of regularization to prevent the solution from going into a bad local minimum. In this case however, instead of fixing a range of boundary modes we will only fix the $R_{00}$ mode, and include constraints on aspect ratio, volume, and elongation to keep the solution from going off in a bad direction.\n",
     "\n",
-    "Finally, we also include a constraint on the average iota across the radius:"
+    "Finally, we also include a constraint on the average rotational transform:"
    ]
   },
   {
@@ -715,10 +716,10 @@
     "\n",
     "constraints = (\n",
     "    ForceBalance(eq=eq0),\n",
-    "    # try to keep the aspect ratio about the same, but if it varies a bit that's OK\n",
+    "    # try to keep the aspect ratio between 7 and 9\n",
     "    AspectRatio(eq=eq0, bounds=(7, 9)),\n",
     "    # similarly, try to keep it from getting too elongated\n",
-    "    Elongation(eq=eq0, bounds=(1 / 3, 3)),\n",
+    "    Elongation(eq=eq0, bounds=(0, 3)),\n",
     "    # Keep volume the same as the initial volume\n",
     "    Volume(eq=eq0, target=eq0.compute(\"V\")[\"V\"]),\n",
     "    # target for average iota\n",
@@ -1057,7 +1058,9 @@
     "    objective=objective,\n",
     "    constraints=constraints,\n",
     "    optimizer=optimizer,\n",
-    "    maxiter=200,  # each step of this is cheaper than a step of a proximal optimizer, but generally requires more steps\n",
+    "    # each iteration of the augmented Lagrangian optimizer is cheaper than a step of a\n",
+    "    # proximal optimizer, but it generally requires more iterations to converge\n",
+    "    maxiter=200,\n",
     "    copy=True,\n",
     "    verbose=3,\n",
     "    options={},\n",
