--- a/docs/notebooks/tutorials/basic_equilibrium.ipynb
+++ b/docs/notebooks/tutorials/basic_equilibrium.ipynb
@@ -152,7 +152,7 @@
     "- `N_grid` (int): Toroidal resolution of nodes in collocation grid.\n",
     "    - default = `2*N_tor`\n",
     "\n",
-    "When `M_grid = M_pol`, the number of collocation nodes in each toroidal cross-section is equal to the number of Zernike polynomials in a FourierZernike basis set of the samel resolution `L_rad = M_pol`. When `N_grid = N_tor`, the number of nodes with unique toroidal angles is equal to the number of terms in the toroidal Fourier series. Convergence is typically superior when the number of nodes exceeds the number of spectral coefficients, so by default the collocation grids are oversampled with respect to the spectral resolutions."
+    "When `M_grid = M_pol`, the number of collocation nodes in each toroidal cross-section is equal to the number of Zernike polynomials in a FourierZernike basis set of the same resolution `L_rad = M_pol`. When `N_grid = N_tor`, the number of nodes with unique toroidal angles is equal to the number of terms in the toroidal Fourier series. Convergence is typically superior when the number of nodes exceeds the number of spectral coefficients, so by default the collocation grids are oversampled with respect to the spectral resolutions."
    ]
   },
   {
@@ -292,7 +292,7 @@
    "source": [
     "Alternatively, we could construct the surface by specifying the Fourier coefficients and mode numbers manually.\n",
     "\n",
-    "The boundary is represented by a double Fourier series for R and Z in terms of a poloidal angle $\\theta$ and the geometric toroidal angle $\\zeta$. We specify the mode numbers for R and Z as 2d arrays of `[m,n]` pairs, and the coefficients as a 1d array.\n",
+    "The boundary is represented by a double Fourier series for R and Z in terms of a poloidal angle $\\theta$ and the geometric toroidal angle $\\zeta$. We specify the mode numbers for R and Z as 2D arrays of `[m,n]` pairs, and the coefficients as a 1D array.\n",
     "\n",
     "In DESC the double Fourier series for R and Z are defined in a slightly different manner than VMEC:\n",
     "\n",
@@ -1181,7 +1181,7 @@
    "id": "0356bf5c-e0e5-4d45-8a35-779856f1c634",
    "metadata": {},
    "source": [
-    "`solve_continuation_automatic` starts with a low resolution vacuum axisymmetric solution, and proceeds to increase the pressure, boundary shaping, and resolution until the final desired configuration is reached. It returns not just the final equilibrium, but each step along the way, as an `EquilibriaFamily`"
+    "`solve_continuation_automatic` starts with a low resolution vacuum axisymmetric solution, and proceeds to increase the pressure, boundary shaping, and resolution until the final desired configuration is reached. It returns not just the final equilibrium, but each step along the way, as an `EquilibriaFamily`. "
    ]
   },
   {
