--- a/docs/notebooks/tutorials/continuation_step_by_step.ipynb
+++ b/docs/notebooks/tutorials/continuation_step_by_step.ipynb
@@ -19,7 +19,7 @@
     }
    },
    "source": [
-    "In this example we step through the continuation method step by step - starting from an axisymmetric vacuum configuration, adding 3d shaping, and then adding pressure."
+    "In this example we step through the continuation method step by step - starting from an axisymmetric vacuum configuration, adding 3D shaping, and then adding pressure."
    ]
   },
   {
@@ -182,7 +182,7 @@
     }
    },
    "source": [
-    "Next we create our objective function, `ForceBalance` which will seek to make $\\mathbf{F} =\\mathbf{J} \\times \\mathbf{B} - \\nabla p = 0$"
+    "Next we create our objective function, `ForceBalance` which will seek to make $\\mathbf{F} \\equiv \\mathbf{J} \\times \\mathbf{B} - \\nabla p = 0$"
    ]
   },
   {
@@ -330,7 +330,7 @@
     }
    ],
    "source": [
-    "# this is a port of scipy's trust region least squares algorithm but using jax functions for better performance\n",
+    "# this is a port of scipy's trust region least squares algorithm but using JAX functions for better performance\n",
     "optimizer = Optimizer(\"lsq-exact\")\n",
     "eq, solver_outputs = eq.solve(\n",
     "    objective=objective, constraints=constraints, optimizer=optimizer, verbose=3\n",
@@ -597,8 +597,8 @@
     "eq.perturb(\n",
     "    deltas={\n",
     "        \"Rb_lmn\": surface_3D.R_lmn - eq.Rb_lmn,  # change in the R boundary coefficients\n",
-    "        \"Zb_lmn\": surface_3D.Z_lmn - eq.Zb_lmn,\n",
-    "    },  # change in the Z boundary coefficients\n",
+    "        \"Zb_lmn\": surface_3D.Z_lmn - eq.Zb_lmn,  # change in the Z boundary coefficients\n",
+    "    },\n",
     "    objective=objective,  # perturb the solution such that J=0 is maintained\n",
     "    constraints=constraints,  # same constraints used in the equilibrium solve\n",
     "    order=2,  # use a 2nd-order Taylor expansion\n",
@@ -914,7 +914,7 @@
     }
    },
    "source": [
-    "Next we'll make our desired pressure profile, corresponding to a profile of the form $p(\\rho) = 2000(\\rho^4 - 2 \\rho^2 + 1)$"
+    "Next we'll make our desired pressure profile, corresponding to a profile of the form $p(\\rho) = 2000(1 - 2 \\rho^2 + \\rho^4) ~\\text{Pa}$"
    ]
   },
   {
@@ -976,7 +976,7 @@
    ],
    "source": [
     "eq.perturb(\n",
-    "    deltas={\"p_l\": pressure.params - eq.p_l},  # change in the R boundary coefficients\n",
+    "    deltas={\"p_l\": pressure.params - eq.p_l},  # change in the pressure coefficients\n",
     "    objective=objective,  # perturb the solution such that JxB-grad(p)=0 is maintained\n",
     "    constraints=constraints,  # same constraints used in the equilibrium solve\n",
     "    order=2,  # use a 2nd-order Taylor expansion\n",
@@ -1142,7 +1142,7 @@
     }
    },
    "source": [
-    "After re-solving, we find the force error is much lower, less than 1\\% throughout the volume:"
+    "After re-solving, we find the force blance residuals are much lower, less than 1\\% normalized errors throughout the volume:"
    ]
   },
   {
