--- a/docs/notebooks/tutorials/nae_constraint.ipynb
+++ b/docs/notebooks/tutorials/nae_constraint.ipynb
@@ -13,7 +13,7 @@
    "id": "cea6dc7c-303e-46c3-a8a8-b42a038261ad",
    "metadata": {},
    "source": [
-    "This tutorial shows how to find equilibrium solutions in DESC which are constrained to have the same axis and near-axis behavior as a NAE solution from the pyQSC code"
+    "This tutorial shows how to find equilibrium solutions in DESC which are constrained to have the same axis and near-axis behavior as a NAE solution from the pyQSC or pyQIC codes"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "id": "2a3fc4c6-14e1-4b42-b95c-ccd69e637c72",
    "metadata": {},
    "source": [
-    "## Creating a DESC Equilibrium from a pyQsc Near-Axis Equilibrium"
+    "## Creating a DESC Equilibrium from a pyQSC or pyQIC Near-Axis Equilibrium"
    ]
   },
   {
@@ -29,7 +29,8 @@
    "id": "8a6ee32b-1a4c-47f5-9a9d-3498fb7d3f55",
    "metadata": {},
    "source": [
-    "Note that you must have pyQsc installed in order to make use of the `Equilibrium.from_near_axis` method, do so with `pip install qsc`"
+    "Note that you must have pyQSC and/or pyQIC installed in order to make use of the `Equilibrium.from_near_axis` method. \n",
+    "You can do so with `pip install qsc`. "
    ]
   },
   {
@@ -105,7 +106,7 @@
    "id": "ed61eac3-54f8-49a2-bb46-23e73e07ea06",
    "metadata": {},
    "source": [
-    "Then, to make the DESC equilibrium, the `Equilibrium` class has a method `Equilibrium.from_near_axis`. This method creates a DESC `Equilibrium` based off of the `pyQsc` equilibrium. It requires as input the desired DESC FourierZernike resolution, as well as the radius at which you want to evaluate the qsc equilibrium at to make the DESC equilibrium's boundary. The equilibrium's initial `R_lmn`, `Z_lmn` Fourier-Zernike coefficients are fit to the `R,Z` evaluated from the `pyQsc` equilibrium, and the initial `L_lmn` are 0 (because the `pyQsc` equilibrium uses Boozer angles, so there is no poloidal stream function)"
+    "Then, to make the DESC equilibrium, the `Equilibrium` class has a method `Equilibrium.from_near_axis`. This method creates a DESC `Equilibrium` based off of the `pyQsc` equilibrium. It requires as input the desired DESC Fourier-Zernike resolutions, as well as the radius at which you want to evaluate the qsc equilibrium at to make the DESC equilibrium's boundary. The equilibrium's initial `R_lmn`, `Z_lmn` Fourier-Zernike coefficients are fit to the `R,Z` evaluated from the `Qsc` equilibrium, and the initial `L_lmn` are 0 (because the `Qsc` equilibrium uses Boozer angles, so there is no poloidal stream function)"
    ]
   },
   {
@@ -219,7 +220,8 @@
    "source": [
     "# get the fixed-boundary constraints, which include also fixing the pressure and fixing the current profile (iota=False flag means fix current)\n",
     "constraints = get_fixed_boundary_constraints(eq=desc_eq)\n",
-    "print(constraints)\n",
+    "for c in constraints:\n",
+    "    print(c)\n",
     "\n",
     "# solve the equilibrium\n",
     "desc_eq.solve(\n",
@@ -240,7 +242,7 @@
    "id": "4191123e-e152-41da-a142-f41081876726",
    "metadata": {},
    "source": [
-    "Now we have a DESC equilibrium solved with the boundary from `pyQsc`. It has zero toroidal current as its profile constraint along with zero pressure since the original Qsc equilibrium had 0 pressure and current."
+    "Now we have a DESC equilibrium solved with the boundary from `Qsc`. It has zero toroidal current as its profile constraint along with zero pressure since the original `Qsc` equilibrium had no pressure or current."
    ]
   },
   {
@@ -481,7 +483,7 @@
     "from desc.objectives import get_equilibrium_objective, get_NAE_constraints\n",
     "\n",
     "eq_NAE = eq_fit.copy()\n",
-    "# this has all the constraints we need, iota=False specifies we want to fix current instead of iota\n",
+    "# this has all the constraints we need\n",
     "constraints = get_NAE_constraints(eq_NAE, qsc_eq, order=1)\n",
     "\n",
     "eq_NAE.solve(\n",
@@ -616,7 +618,7 @@
    "id": "6bc7d25c",
    "metadata": {},
    "source": [
-    "The correct behaviour near the axis may be also checked by assessing directly other features of the equilibrium; most notably, the behaviour of |B| on axis, the rotational transform on axis, as well as the form of $\\lambda$. Starting from the rotational transform, we may compare the value obtained to that of the near-axis expansion,"
+    "The correct behaviour near the axis may be also checked by assessing directly other features of the equilibrium; most notably, the behaviour of |B| on axis, the rotational transform on axis, as well as the form of $\\lambda$. Starting from the rotational transform, we may compare the values obtained in the equilibrium to those of the near-axis expansion. "
    ]
   },
   {
