--- a/docs/notebooks/tutorials/basic_optimization.ipynb
+++ b/docs/notebooks/tutorials/basic_optimization.ipynb
@@ -40,7 +40,12 @@
     }
    },
    "source": [
-    "This tutorial demonstrates how to perform optimization with DESC. It will go through two examples: 1) targeting the \"triple product\" quasi-symmetry objective $f_T$ in the full plasma volume 2) targeting the \"two-term\" objective $f_C$ for quasi-helical symmetry at the plasma boundary surface. These examples are adapted from a problem first presented in [Rodriguez et al. (2022)](https://www.cambridge.org/core/journals/journal-of-plasma-physics/article/measures-of-quasisymmetry-for-stellarators/01B9DFE86A23964F331E0E0615B4E7A2) and reproduced in [Dudt et al. (2022)](https://arxiv.org/abs/2204.00078)."
+    "This tutorial demonstrates how to perform optimization with DESC. It will go through two examples: \n",
+    "\n",
+    "1) targeting the \"triple product\" quasi-symmetry objective $f_T$ in the full plasma volume\n",
+    "2) targeting the \"two-term\" objective $f_C$ for quasi-helical symmetry at the plasma boundary surface\n",
+    "\n",
+    "These examples are adapted from a problem first presented in [Rodriguez et al. (2022)](https://www.cambridge.org/core/journals/journal-of-plasma-physics/article/measures-of-quasisymmetry-for-stellarators/01B9DFE86A23964F331E0E0615B4E7A2) and reproduced in [Dudt et al. (2023)](https://www.cambridge.org/core/journals/journal-of-plasma-physics/article/desc-stellarator-code-suite-part-3-quasisymmetry-optimization/0B262B685969D2F5697BEE28C8A78DB1)."
    ]
   },
   {
@@ -238,11 +243,14 @@
     }
    ],
    "source": [
-    "plot_boozer_modes(eq_init, num_modes=8, rho=10)\n",
     "# plot modes of |B| in Boozer coordinates\n",
-    "plot_boozer_surface(eq_init)\n",
+    "plot_boozer_modes(eq_init, num_modes=8, rho=10)\n",
+    "\n",
     "# plot |B| contours in Boozer coordinates on a surface (default is rho=1)\n",
-    "plot_qs_error(eq_init, helicity=(1, eq_init.NFP), rho=10);  # plot normalized QS metrics"
+    "plot_boozer_surface(eq_init)\n",
+    "\n",
+    "# plot normalized QS metrics\n",
+    "plot_qs_error(eq_init, helicity=(1, eq_init.NFP), rho=10)"
    ]
   },
   {
@@ -297,12 +305,10 @@
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
-    "\\label{eq:fT_vec}\n",
     "\\mathbf{f}_{T} = \\{ f_{T}(\\theta_{i},\\zeta_{j}) ~|~ i \\in [0,2\\pi), j \\in [0,2\\pi/N_{FP}) \\}\n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
-    "\\label{eq:fT_hat}\n",
     "\\hat{f}_{T}(\\psi) = \\frac{\\langle R \\rangle^2 \\langle |f_{T}| \\rangle}{\\langle B \\rangle^4}\n",
     "\\end{equation}"
    ]
@@ -316,7 +322,7 @@
     }
    },
    "source": [
-    "To set up the optimization problem, we need to choose an optimization algorithm. `\"proximal-lsq-exact\"` is a custom least-squares routine (with `proximal` referring to the proximal projection done at each step to ensure force balance i.e. it perturbs the boundary in the direction to optimize the objective function, then resolves to ensure force balance), but there are other options available ([see documentation](https://desc-docs.readthedocs.io/en/latest/_api/optimize/desc.optimize.Optimizer.html)). "
+    "To set up the optimization problem, we need to choose an optimization algorithm. `\"proximal-lsq-exact\"` is a custom least-squares routine (with `proximal` referring to the proximal projection done at each step to ensure force balance i.e. it perturbs the boundary in the direction to optimize the objective function, then resolves the equilibrium to ensure force balance), but there are other options available ([see documentation](https://desc-docs.readthedocs.io/en/latest/_api/optimize/desc.optimize.Optimizer.html)). "
    ]
   },
   {
@@ -345,14 +351,13 @@
    "source": [
     "Next we need to define the optimization constraints. In DESC, we explicitly specify the constraints, and all other parameters become free variables for optimization. In this example, we would like the following 4 stellarator-symmetric boundary coefficients to be our only optimization variables:\n",
     "\n",
-    "\\begin{multline}\n",
-    "\\\\\n",
-    "R^{b}_{1,2} \\cos(\\theta) \\cos(2N_{FP}\\phi) \\\\\n",
-    "R^{b}_{-1,-2} \\sin(\\theta) \\sin(2N_{FP}\\phi) \\\\\n",
-    "Z^{b}_{-1,2} \\sin(\\theta) \\cos(2N_{FP}\\phi) \\\\\n",
-    "Z^{b}_{1,-2} \\cos(\\theta) \\sin(2N_{FP}\\phi) \\\\\n",
-    "\\\\\n",
-    "\\end{multline}\n",
+    "$R^{b}_{1,2} \\cos(\\theta) \\cos(2N_{FP}\\phi)$\n",
+    "\n",
+    "$R^{b}_{-1,-2} \\sin(\\theta) \\sin(2N_{FP}\\phi)$\n",
+    "\n",
+    "$Z^{b}_{-1,2} \\sin(\\theta) \\cos(2N_{FP}\\phi)$\n",
+    "\n",
+    "$Z^{b}_{1,-2} \\cos(\\theta) \\sin(2N_{FP}\\phi)$\n",
     "\n",
     "We will fix all other boundary modes besides these. We will also fix the pressure profile, rotational transform profile, and total toroidal magnetic flux. Finally, we also specify equilibrium force balance as a constraint by including the `ForceBalance()` objective in the list of constraints."
    ]
@@ -772,7 +777,7 @@
     "    FixIota(eq=eq_qs_C),  # fix rotational transform profile\n",
     "    FixPsi(eq=eq_qs_C),  # fix total toroidal magnetic flux\n",
     ")\n",
-    "# Two term objective\n",
+    "# two-term objective\n",
     "objective_fC = ObjectiveFunction(\n",
     "    QuasisymmetryTwoTerm(eq=eq_qs_C, grid=grid_rho1, helicity=(1, eq_init.NFP)),\n",
     "    verbose=0,\n",
