--- a/docs/notebooks/tutorials/nae_constraint.ipynb
+++ b/docs/notebooks/tutorials/nae_constraint.ipynb
@@ -597,7 +597,8 @@
     "    ax=ax,\n",
     "    color=[\"r\"],\n",
     "    legend=False,\n",
-    "    labels=[\"Fixed boundary\"],figsize=(8,8)\n",
+    "    labels=[\"Fixed boundary\"],\n",
+    "    figsize=(8, 8),\n",
     ")\n",
     "plot_qs_error(\n",
     "    eq_NAE,\n",
@@ -651,11 +652,11 @@
     "from desc.plotting import plot_fsa\n",
     "\n",
     "rho = np.linspace(0, 1e-1)\n",
-    "fig, ax, iota_nae = plot_fsa(eq_NAE, \"iota\", rho=rho, return_data=True,lw=3)\n",
+    "fig, ax, iota_nae = plot_fsa(eq_NAE, \"iota\", rho=rho, return_data=True, lw=3)\n",
     "fig, ax, iota_surf = plot_fsa(\n",
-    "    desc_eq, \"iota\", rho=rho, ax=ax, return_data=True, linecolor=\"orange\",lw=4\n",
+    "    desc_eq, \"iota\", rho=rho, ax=ax, return_data=True, linecolor=\"orange\", lw=4\n",
     ")\n",
-    "plt.plot(rho, np.ones(np.size(rho)) * qsc_eq.iota, linestyle=\"--\",lw=3)\n",
+    "plt.plot(rho, np.ones(np.size(rho)) * qsc_eq.iota, linestyle=\"--\", lw=3)\n",
     "plt.legend([\"Fixed NAE\", \"Fixed boundary\", \"NAE\"])\n",
     "print(\n",
     "    \"Relative error in the rotational transform (fixed NAE): \",\n",
@@ -697,17 +698,15 @@
     "from desc.compute import data_index\n",
     "from desc.grid import LinearGrid\n",
     "\n",
-    "grid = LinearGrid(\n",
-    "    theta=np.array(0.0), N=100, NFP=desc_eq.NFP, rho=np.array(0.0)\n",
-    ")\n",
+    "grid = LinearGrid(theta=np.array(0.0), N=100, NFP=desc_eq.NFP, rho=np.array(0.0))\n",
     "# Evaluate B modes near the axis\n",
     "data_surf = desc_eq.compute([\"|B|\"], grid=grid)\n",
     "data_nae = eq_NAE.compute([\"|B|\"], grid=grid)\n",
-    "phi = grid.nodes[:,2]\n",
+    "phi = grid.nodes[:, 2]\n",
     "\n",
-    "plt.plot(phi, data_surf[\"|B|\"],lw=3)\n",
-    "plt.plot(phi, data_nae[\"|B|\"],lw=4)\n",
-    "plt.plot(phi, np.ones(np.size(phi)) * qsc_eq.B0, linestyle=\"--\",lw=3)\n",
+    "plt.plot(phi, data_surf[\"|B|\"], lw=3)\n",
+    "plt.plot(phi, data_nae[\"|B|\"], lw=4)\n",
+    "plt.plot(phi, np.ones(np.size(phi)) * qsc_eq.B0, linestyle=\"--\", lw=3)\n",
     "plt.xlabel(\"$\\phi$\")\n",
     "plt.ylabel(\"$|B|$\")\n",
     "plt.legend([\"Fixed surface\", \"Fixed NAE\", \"NAE\"])\n",
@@ -762,9 +761,9 @@
     "    \"Deviation of theta from Boozer angle (fixed nae)\",\n",
     "    np.mean(np.abs(lam_nae + qsc_eq.iota * qsc_eq.nu_spline(phi))),\n",
     ")\n",
-    "plt.plot(phi, lam_surf,lw=3)\n",
-    "plt.plot(phi, lam_nae,lw=4)\n",
-    "plt.plot(phi, -qsc_eq.iota * qsc_eq.nu_spline(phi), linestyle=\"--\",lw=3)\n",
+    "plt.plot(phi, lam_surf, lw=3)\n",
+    "plt.plot(phi, lam_nae, lw=4)\n",
+    "plt.plot(phi, -qsc_eq.iota * qsc_eq.nu_spline(phi), linestyle=\"--\", lw=3)\n",
     "plt.xlabel(\"$\\phi$\")\n",
     "plt.ylabel(\"$\\lambda$\")\n",
     "plt.legend([\"Fixed surface\", \"Fixed NAE\", \"NAE\"])\n",
