--- a/docs/notebooks/tutorials/advanced_equilibrium_continuation.ipynb
+++ b/docs/notebooks/tutorials/advanced_equilibrium_continuation.ipynb
@@ -61,8 +61,14 @@
     "\n",
     "The conversion creates a new file with `_desc` appended to the file name. The above command automatically converts the VMEC input file to a DESC input file and begins solving it. There are many DESC solver options without VMEC analogs, such as the multi-grid  continuation method steps, so DESC will automatically choose a conservative continuation method when ran in this way, which is generally recommended for most equilibria to ensure robust convergence.\n",
     "\n",
-    "Generally, the most important parameters to tweak are related to the spectral resolution and the continuation method. DESC leverages a multi-grid continuation method to allow for robust convergence of highly shaped equilibria. The following parameters control this method:\n",
-    "\n",
+    "Generally, the most important parameters to tweak are related to the spectral resolution and the continuation method. DESC leverages a multi-grid continuation method to allow for robust convergence of highly shaped equilibria. The following parameters control this method:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "889d1141-e05f-40c3-92d6-ad67b19834d0",
+   "metadata": {},
+   "source": [
     "### Spectral Resolution\n",
     " \n",
     "- `L_rad` (int): Maximum radial mode number for the Fourier-Zernike basis.\n",
@@ -79,11 +85,30 @@
     "    - default = `2*M_pol`\n",
     "- `N_grid` (int): Toroidal resolution of nodes in collocation grid.\n",
     "    - default = `2*N_tor`\n",
-    "\n",
-    "When `M_grid = M_pol`, the number of collocation nodes in each toroidal cross-section is equal to the number of Zernike polynomials in a FourierZernike basis set of the samel resolution `L_rad = M_pol`. When `N_grid = N_tor`, the number of nodes with unique toroidal angles is equal to the number of terms in the toroidal Fourier series. Convergence is typically superior when the number of nodes exceeds the number of spectral coefficients, so by default the collocation grids are oversampled with respect to the spectral resolutions.\n",
-    "\n",
-    "It is recommended to NOT include anything for the `pres_ratio` or `bdry_ratio` arguments, as then a conservative, automated multi-grid method will be used that has been found to be very robust. If you want to instead control the multi-grid steps manually, these arguments can also be passed as arrays, where each element denotes the value to use at that iteration. Array elements are delimited by either a space ` `, comma `,`, or semicolon `;`. Arrays can also be created using the shorthand notation `start:interval:end` and `(value)x(repititions)`. For example, an input line of `M_pol = 6:2:10, 10; 11x2 12` is equivalent to `M_pol = 6, 8, 10, 10, 11, 11, 12`.\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c37e81c-afb7-4779-b27d-e8ddd7504203",
+   "metadata": {},
+   "source": [
+    "When `M_grid = M_pol`, the number of collocation nodes in each toroidal cross-section is equal to the number of Zernike polynomials in a FourierZernike basis set of the samel resolution `L_rad = M_pol`. When `N_grid = N_tor`, the number of nodes with unique toroidal angles is equal to the number of terms in the toroidal Fourier series. Convergence is typically superior when the number of nodes exceeds the number of spectral coefficients, so by default the collocation grids are oversampled with respect to the spectral resolutions.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9c3c978-276f-4de3-b55e-61a124ac40dd",
+   "metadata": {},
+   "source": [
+    "It is recommended to NOT include anything for the `pres_ratio` or `bdry_ratio` arguments, as then a conservative, automated multi-grid method will be used that has been found to be very robust. If you want to instead control the multi-grid steps manually, these arguments can also be passed as arrays, where each element denotes the value to use at that iteration. Array elements are delimited by either a space, comma `,`, or semicolon `;`. Arrays can also be created using the shorthand notation `start:interval:end` and `(value)x(repititions)`. For example, an input line of `M_pol = 6:2:10, 10; 11x2 12` is equivalent to `M_pol = 6, 8, 10, 10, 11, 11, 12`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4f25167-62df-406b-b577-3731a40be234",
+   "metadata": {},
+   "source": [
     "### Continuation Method\n",
     "\n",
     "- `pres_ratio` (float): Multiplier on the pressure profile. Default = `1.0`.\n",
