fix corrupted notebook

--- a/docs/notebooks/tutorials/omnigenity.ipynb
+++ b/docs/notebooks/tutorials/omnigenity.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "0974e779",
    "metadata": {
     "pycharm": {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "9a54753b",
    "metadata": {
     "pycharm": {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "ee57db1b",
    "metadata": {
     "pycharm": {
@@ -81,7 +81,24 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DESC version 0.10.3+171.ge7e41dfe,using JAX backend, jax version=0.4.11, jaxlib version=0.4.11, dtype=float64\n",
+      "Using device: CPU, with 11.63 GB available memory\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dudt/anaconda3/envs/desc/lib/python3.10/site-packages/jaxtyping/__init__.py:221: UserWarning: jaxtyping version >=0.2.23 should be used with Equinox version >=0.11.1\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -126,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "8413ed5a",
    "metadata": {
     "tags": []
@@ -161,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "45bdc94a",
    "metadata": {
     "tags": []
@@ -173,13 +190,13 @@
      "text": [
       "Building objective: current density\n",
       "Precomputing transforms\n",
-      "Timer: Precomputing transforms = 126 ms\n",
-      "Timer: Objective build = 311 ms\n",
-      "Timer: Linear constraint projection build = 1.12 sec\n",
+      "Timer: Precomputing transforms = 4.53 sec\n",
+      "Timer: Objective build = 10.1 sec\n",
+      "Timer: Linear constraint projection build = 13.3 sec\n",
       "Compiling objective function and derivatives: ['current density']\n",
-      "Timer: Objective compilation time = 1.42 sec\n",
-      "Timer: Jacobian compilation time = 2.95 sec\n",
-      "Timer: Total compilation time = 4.38 sec\n",
+      "Timer: Objective compilation time = 2.24 sec\n",
+      "Timer: Jacobian compilation time = 5.29 sec\n",
+      "Timer: Total compilation time = 7.54 sec\n",
       "Number of parameters: 120\n",
       "Number of objectives: 1275\n",
       "Starting optimization\n",
@@ -201,8 +218,8 @@
       "         Iterations: 8\n",
       "         Function evaluations: 9\n",
       "         Jacobian evaluations: 9\n",
-      "Timer: Solution time = 2.28 sec\n",
-      "Timer: Avg time per step = 254 ms\n",
+      "Timer: Solution time = 7.54 sec\n",
+      "Timer: Avg time per step = 837 ms\n",
       "Start of solver\n",
       "Total (sum of squares):  5.212e+00, \n",
       "Maximum absolute Current density:  4.300e+05 (A*m)\n",
@@ -249,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "e2b0c8b5",
    "metadata": {
     "tags": []
@@ -262,7 +279,7 @@
        " <AxesSubplot: title={'center': '$|\\\\mathbf{B}|~(T)$'}, xlabel='$\\\\zeta_{Boozer}$', ylabel='$\\\\theta_{Boozer}$'>)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -320,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "06899e38",
    "metadata": {
     "tags": []
@@ -353,17 +370,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "2147920d-3714-47ef-b3e4-a50f5b53da21",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fac213b2410>"
+       "<matplotlib.legend.Legend at 0x7f757c6f6980>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -419,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "41007a61",
    "metadata": {
     "tags": []
@@ -478,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "043ea32a",
    "metadata": {
     "tags": []
@@ -523,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "2a6e7802",
    "metadata": {
     "tags": []
@@ -536,28 +553,28 @@
       "Building objective: major radius\n",
       "Building objective: aspect ratio\n",
       "Precomputing transforms\n",
-      "Timer: Precomputing transforms = 40.2 ms\n",
+      "Timer: Precomputing transforms = 87.4 ms\n",
       "Building objective: omnigenity\n",
       "Precomputing transforms\n",
-      "Timer: Precomputing transforms = 72.5 ms\n",
+      "Timer: Precomputing transforms = 426 ms\n",
       "Building objective: omnigenity\n",
       "Precomputing transforms\n",
-      "Timer: Precomputing transforms = 77.1 ms\n",
-      "Timer: Objective build = 252 ms\n",
+      "Timer: Precomputing transforms = 107 ms\n",
+      "Timer: Objective build = 857 ms\n",
       "Building objective: current density\n",
       "Precomputing transforms\n",
-      "Timer: Precomputing transforms = 117 ms\n",
-      "Timer: Objective build = 301 ms\n",
-      "Timer: Linear constraint projection build = 931 ms\n",
-      "Timer: Linear constraint projection build = 264 ms\n",
+      "Timer: Precomputing transforms = 168 ms\n",
+      "Timer: Objective build = 462 ms\n",
+      "Timer: Linear constraint projection build = 4.47 sec\n",
+      "Timer: Linear constraint projection build = 1.80 sec\n",
       "Compiling objective function and derivatives: ['major radius', 'aspect ratio', 'omnigenity', 'omnigenity']\n",
-      "Timer: Objective compilation time = 2.58 sec\n",
-      "Timer: Jacobian compilation time = 6.75 sec\n",
-      "Timer: Total compilation time = 9.34 sec\n",
+      "Timer: Objective compilation time = 4.65 sec\n",
+      "Timer: Jacobian compilation time = 11.6 sec\n",
+      "Timer: Total compilation time = 16.3 sec\n",
       "Compiling objective function and derivatives: ['current density']\n",
-      "Timer: Objective compilation time = 1.22 sec\n",
-      "Timer: Jacobian compilation time = 3.01 sec\n",
-      "Timer: Total compilation time = 4.24 sec\n",
+      "Timer: Objective compilation time = 2.27 sec\n",
+      "Timer: Jacobian compilation time = 5.24 sec\n",
+      "Timer: Total compilation time = 7.52 sec\n",
       "Number of parameters: 211\n",
       "Number of objectives: 258\n",
       "Number of equality constraints: 1275\n",
@@ -673,8 +690,8 @@
       "         Iterations: 100\n",
       "         Function evaluations: 179\n",
       "         Jacobian evaluations: 100\n",
-      "Timer: Solution time = 1.24 min\n",
-      "Timer: Avg time per step = 737 ms\n",
+      "Timer: Solution time = 2.11 min\n",
+      "Timer: Avg time per step = 1.25 sec\n",
       "Start of solver\n",
       "Total (sum of squares):  2.663e+00, \n",
       "GenericObjective value:  9.999e-01 (m)\n",
@@ -745,6 +762,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "add20b11",
    "metadata": {},
    "source": [
     "Since we used an augmented Lagrangian optimizer, the nonlinear equilibrium constraint is not guaranteed to be satisfied. \n",
@@ -753,7 +771,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
+   "id": "89a8472d",
    "metadata": {},
    "outputs": [
     {
@@ -762,13 +781,13 @@
      "text": [
       "Building objective: current density\n",
       "Precomputing transforms\n",
-      "Timer: Precomputing transforms = 147 ms\n",
-      "Timer: Objective build = 356 ms\n",
-      "Timer: Linear constraint projection build = 1.27 sec\n",
+      "Timer: Precomputing transforms = 242 ms\n",
+      "Timer: Objective build = 541 ms\n",
+      "Timer: Linear constraint projection build = 2.32 sec\n",
       "Compiling objective function and derivatives: ['current density']\n",
-      "Timer: Objective compilation time = 1.36 sec\n",
-      "Timer: Jacobian compilation time = 3.25 sec\n",
-      "Timer: Total compilation time = 4.61 sec\n",
+      "Timer: Objective compilation time = 3.70 sec\n",
+      "Timer: Jacobian compilation time = 12.1 sec\n",
+      "Timer: Total compilation time = 15.8 sec\n",
       "Number of parameters: 120\n",
       "Number of objectives: 1275\n",
       "Starting optimization\n",
@@ -784,8 +803,8 @@
       "         Iterations: 2\n",
       "         Function evaluations: 3\n",
       "         Jacobian evaluations: 3\n",
-      "Timer: Solution time = 2.05 sec\n",
-      "Timer: Avg time per step = 686 ms\n",
+      "Timer: Solution time = 5.27 sec\n",
+      "Timer: Avg time per step = 1.75 sec\n",
       "Start of solver\n",
       "Total (sum of squares):  9.732e-05, \n",
       "Maximum absolute Current density:  6.432e+03 (A*m)\n",
@@ -816,7 +835,7 @@
     }
    ],
    "source": [
-    "eq.solve(objective=\"vacuum\", verbose=3);"
+    "eq, _ = eq.solve(objective=\"vacuum\", verbose=3)"
    ]
   },
   {
@@ -832,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "c16c69e4",
    "metadata": {
     "tags": []
@@ -845,7 +864,7 @@
        " <AxesSubplot: title={'center': '$|\\\\mathbf{B}|~(T)$'}, xlabel='$\\\\zeta_{Boozer}$', ylabel='$\\\\theta_{Boozer}$'>)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -886,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "7b7bbbf5",
    "metadata": {
     "tags": []
@@ -899,7 +918,7 @@
        " <AxesSubplot: title={'center': '$|\\\\mathbf{B}|~(T)$'}, xlabel='$\\\\zeta_{Boozer}$', ylabel='$\\\\theta_{Boozer}$'>)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -941,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "f00b143f",
    "metadata": {
     "tags": []
@@ -954,7 +973,7 @@
        " <AxesSubplot: xlabel='$R ~(\\\\mathrm{m})$', ylabel='$Z ~(\\\\mathrm{m})$'>)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -983,6 +1002,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "26848ff2",
    "metadata": {},
    "source": [
     "We can plot the magnetic well again to see how its shape changed during the optimization. "
@@ -990,17 +1010,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "a96e80c6-2344-46ff-a37f-766e9c87d862",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7faba0bcc910>"
+       "<matplotlib.legend.Legend at 0x7f737be5a890>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1041,6 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6bdd8c84",
    "metadata": {},
    "outputs": [],
    "source": []
