--- a/docs/notebooks/tutorials/advanced_optimization.ipynb
+++ b/docs/notebooks/tutorials/advanced_optimization.ipynb
@@ -722,7 +722,7 @@
     "    # similarly, try to keep it from getting too elongated\n",
     "    Elongation(eq=eq0, bounds=(0, 3)),\n",
     "    # Keep volume the same as the initial volume\n",
-    "    Volume(thing=eq0, target=eq0.compute(\"V\")[\"V\"]),\n",
+    "    Volume(eq=eq0, target=eq0.compute(\"V\")[\"V\"]),\n",
     "    # target for average iota\n",
     "    RotationalTransform(eq=eq0, target=1.1, loss_function=\"mean\"),\n",
     "    # fix major radius\n",
