--- a/notebooks/straight_coord.ipynb
+++ b/notebooks/straight_coord.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DESC version 0+untagged.5711.gad76a49.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
-      "Using device: CPU, with 1.78 GB available memory\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy.constants import mu_0\n",
@@ -34,7 +25,8 @@
     "    ZernikeRZToroidalSection,\n",
     ")\n",
     "from desc.grid import LinearGrid, QuadratureGrid\n",
-    "from desc.profiles import PowerSeriesProfile"
+    "from desc.profiles import PowerSeriesProfile\n",
+    "from desc.basis import FourierZernikeBasis"
    ]
   },
   {
@@ -64,7 +56,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eq1 = Equilibrium(L=3, M=3, N=1, sym=None)\n",
+    "basis = eq1.R_basis\n",
+    "rlmn = np.zeros(basis.num_modes)\n",
+    "zlmn = np.zeros(basis.num_modes)\n",
+    "rlmn[basis.get_idx(0,0,0)] = 10\n",
+    "rlmn[basis.get_idx(1,1,0)] = 0.8\n",
+    "rlmn[basis.get_idx(3,1,0)] = 0.2\n",
+    "zlmn[basis.get_idx(1,-1,0)] = 0.8\n",
+    "zlmn[basis.get_idx(3,-1,0)] = -0.2\n",
+    "eq1.R_lmn = rlmn\n",
+    "eq1.Z_lmn = zlmn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
